package com.usco.parqueaderos_api.entity;

import jakarta.persistence.*;
import lombok.AllArgsConstructor;
import lombok.Data;
import lombok.NoArgsConstructor;
import org.locationtech.jts.geom.Point;
import org.locationtech.jts.geom.Polygon;

@Entity
@Table(name = "punto_parqueo")
@Data
@NoArgsConstructor
@AllArgsConstructor
public class PuntoParqueo {
    
    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Long id;
    
    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "sub_seccion_id", nullable = false)
    private SubSeccion subSeccion;
    
    @Column(nullable = false, length = 100)
    private String nombre;
    
    @Column(length = 20)
    private String acronimo;
    
    @Column(columnDefinition = "TEXT")
    private String descripcion;
    
    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "tipo_punto_parqueo_id", nullable = false)
    private TipoPuntoParqueo tipoPuntoParqueo;
    
    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "estado_id", nullable = false)
    private Estado estado;
    
    @Column(columnDefinition = "geometry(Polygon,4326)")
    private Polygon poligono;
    
    @Column(columnDefinition = "geometry(Point,4326)")
    private Point coordenada;
}
