package com.usco.parqueaderos_api.ticket.entity;

import com.usco.parqueaderos_api.parking.entity.Parqueadero;
import com.usco.parqueaderos_api.parking.entity.PuntoParqueo;
import com.usco.parqueaderos_api.tariff.entity.Tarifa;
import com.usco.parqueaderos_api.vehicle.entity.Vehiculo;
import jakarta.persistence.*;
import lombok.AllArgsConstructor;
import lombok.Data;
import lombok.NoArgsConstructor;

import java.time.LocalDateTime;

@Entity
@Table(name = "ticket")
@Data
@NoArgsConstructor
@AllArgsConstructor
public class Ticket {

    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Long id;

    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "parqueadero_id", nullable = false)
    private Parqueadero parqueadero;

    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "punto_parqueo_id", nullable = false)
    private PuntoParqueo puntoParqueo;

    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "vehiculo_id", nullable = false)
    private Vehiculo vehiculo;

    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "tarifa_id", nullable = false)
    private Tarifa tarifa;

    @Column(name = "fecha_hora_entrada", nullable = false)
    private LocalDateTime fechaHoraEntrada;

    @Column(name = "fecha_hora_salida")
    private LocalDateTime fechaHoraSalida;

    /**
     * Cuando la camara SALIDA confirma fisicamente que el vehiculo cruzo.
     * Puede ser igual o posterior a fechaHoraSalida si el ticket se cerro
     * manualmente antes de que el carro pasara por la camara. Solo se setea
     * la primera vez que la camara lo ve; reentradas en la ventana de
     * cooldown no la sobreescriben.
     */
    @Column(name = "fecha_hora_salida_fisica")
    private LocalDateTime fechaHoraSalidaFisica;

    @Column(length = 50)
    private String estado; // EN_CURSO, CERRADO, ANULADO

    @Column(name = "monto_calculado")
    private Double montoCalculado;
}
