@startuml
hide circle
skinparam linetype ortho

entity Empresa {
  *id : BIGINT <<PK>>
  --
  nit : VARCHAR
  nombre : VARCHAR
  estado_id : BIGINT <<FK>>
}

entity Parqueadero {
  *id : BIGINT <<PK>>
  --
  empresa_id : BIGINT <<FK>>
  tipo_parqueadero_id : BIGINT <<FK>>
  nombre : VARCHAR
  ubicacion : GEOMETRY(POINT)
  estado_id : BIGINT <<FK>>
}

entity Nivel {
  *id : BIGINT <<PK>>
  --
  parqueadero_id : BIGINT <<FK>>
  nombre : VARCHAR
  estado_id : BIGINT <<FK>>
}

entity Seccion {
  *id : BIGINT <<PK>>
  --
  nivel_id : BIGINT <<FK>>
  nombre : VARCHAR
  estado_id : BIGINT <<FK>>
}

entity SubSeccion {
  *id : BIGINT <<PK>>
  --
  seccion_id : BIGINT <<FK>>
  nombre : VARCHAR
  estado_id : BIGINT <<FK>>
}

entity PuntoParqueo {
  *id : BIGINT <<PK>>
  --
  subseccion_id : BIGINT <<FK>>
  tipo_punto_id : BIGINT <<FK>>
  geometria : GEOMETRY(POLYGON)
  estado_id : BIGINT <<FK>>
}

entity Ticket {
  *id : BIGINT <<PK>>
  --
  punto_parqueo_id : BIGINT <<FK>>
  vehiculo_id : BIGINT <<FK>>
  tarifa_id : BIGINT <<FK>>
  fecha_hora_entrada : TIMESTAMP
  fecha_hora_salida : TIMESTAMP
  fecha_hora_salida_fisica : TIMESTAMP
  monto : NUMERIC
  estado : VARCHAR
}

entity Reserva {
  *id : BIGINT <<PK>>
  --
  punto_parqueo_id : BIGINT <<FK>>
  vehiculo_id : BIGINT <<FK>>
  fecha_hora_inicio : TIMESTAMP
  fecha_hora_fin : TIMESTAMP
  estado : VARCHAR
}

entity Vehiculo {
  *id : BIGINT <<PK>>
  --
  persona_id : BIGINT <<FK>>
  placa : VARCHAR
  tipo_vehiculo_id : BIGINT <<FK>>
}

entity Factura {
  *id : BIGINT <<PK>>
  --
  ticket_id : BIGINT <<FK>>
  monto_total : NUMERIC
  estado : VARCHAR
}

entity Pago {
  *id : BIGINT <<PK>>
  --
  factura_id : BIGINT <<FK>>
  monto : NUMERIC
  metodo : VARCHAR
  estado : VARCHAR
}

Empresa ||--o{ Parqueadero
Parqueadero ||--o{ Nivel
Nivel ||--o{ Seccion
Seccion ||--o{ SubSeccion
SubSeccion ||--o{ PuntoParqueo
PuntoParqueo ||--o{ Ticket
PuntoParqueo ||--o{ Reserva
Vehiculo ||--o{ Ticket
Vehiculo ||--o{ Reserva
Ticket ||--o| Factura
Factura ||--o{ Pago
@enduml